sample-cicd-18-apr-25/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-website
  namespace: dynamic-web
spec:
  selector:
    app: dynamic-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
